// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisHits]}
>
  <ais-instantsearch>
    <ais-hits>
      <div
        class="ais-Hits"
      >
        
        
        <div>
          <ul
            class="ais-Hits-list"
          >
            
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  foo
                </span>
              </ais-highlight>
            </li>
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  bar
                </span>
              </ais-highlight>
            </li>
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  foobar
                </span>
              </ais-highlight>
            </li>
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  barfoo
                </span>
              </ais-highlight>
            </li>
          </ul>
        </div>
      </div>
    </ais-hits>
  </ais-instantsearch>
</ng-component>
`;

exports[`Hits renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisHits]}
>
  <ais-instantsearch>
    <ais-hits>
      <div
        class="ais-Hits"
      >
        
        
        <div>
          <ul
            class="ais-Hits-list"
          >
            
          </ul>
        </div>
      </div>
    </ais-hits>
  </ais-instantsearch>
</ng-component>
`;

exports[`Hits should apply \`transformItems\` if specified 1`] = `
<ng-component
  testedWidget={[Function NgAisHits]}
>
  <ais-instantsearch>
    <ais-hits>
      <div
        class="ais-Hits"
      >
        
        
        <div>
          <ul
            class="ais-Hits-list"
          >
            
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  transformed - foo
                </span>
              </ais-highlight>
            </li>
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  transformed - bar
                </span>
              </ais-highlight>
            </li>
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  transformed - foobar
                </span>
              </ais-highlight>
            </li>
            <li
              class="ais-Hits-item"
            >
              <ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  transformed - barfoo
                </span>
              </ais-highlight>
            </li>
          </ul>
        </div>
      </div>
    </ais-hits>
  </ais-instantsearch>
</ng-component>
`;
